appId: com.fabiofiorita.porcelain.dev
name: Pair and reconnect to a LAN environment
---
- stopApp
- runFlow: launch-development.yaml
- runFlow: open-settings.yaml
- tapOn: Add environment
- assertVisible: Pair an environment
- tapOn:
    id: pairing-link
- inputText: ${PAIRING_LINK}
- waitForAnimationToEnd
- tapOn: Pair
- assertNotVisible: Pair an environment
- assertVisible: Online
- stopApp
- runFlow: launch-development.yaml
- runFlow: open-settings.yaml
- assertVisible: Online
