appId: com.fabiofiorita.porcelain.dev
name: Pair an environment
---
- tapOn:
    id: add-environment
- tapOn:
    id: pairing-link
- inputText: ${PAIRING_LINK}
- waitForAnimationToEnd
- tapOn:
    id: pair-environment
- assertNotVisible: Pair an environment
- assertVisible: ${ENVIRONMENT_NAME}
- assertVisible: Online
